# x500_ev_ctrl

CPSL_ROS2_PX4/: README.md
CPSL_ROS2_PX4/src/cpsl_px4_bridge/: package.xml  setup.cfg  setup.py
CPSL_ROS2_PX4/src/cpsl_px4_bridge/cpsl_px4_bridge/: spoof_vicon_to_px4_ev.py  vicon_to_px4_ev.py  vicon_to_px4_ev_luo.py
CPSL_ROS2_PX4/src/cpsl_px4_bridge/launch/: spoof_vicon_to_px4_ev.launch.py  vicon_to_px4_ev.launch.py
CPSL_ROS2_PX4/src/cpsl_px4_vicon_controller/cpsl_px4_vicon_controller/: README.md  package.xml  setup.cfg  setup.py
CPSL_ROS2_PX4/src/cpsl_px4_vicon_controller/cpsl_px4_vicon_controller/config/: mission_example.yaml  x500_4_waypoint_ev_ctrl_param_082325.params
CPSL_ROS2_PX4/src/cpsl_px4_vicon_controller/cpsl_px4_vicon_controller/cpsl_px4_vicon_controller/: waypoint_offboard_node.py
CPSL_ROS2_PX4/src/cpsl_px4_vicon_controller/cpsl_px4_vicon_controller/launch/: waypoint_mission_launch.py
CPSL_ROS2_PX4/src/cpsl_px4_vicon_controller/cpsl_px4_vicon_controller/resource/: cpsl_px4_vicon_controller
CPSL_UAV_Tracking/: LICENSE  readme.md  realsense_config_10hz.json
CPSL_UAV_Tracking/scripts/: attack.ipynb  readme_ros2bag_to_csv.md  ros2bag_to_csv.py  run_uav_tracker_stack.sh  run_uav_tracker_stack_px4.sh  vicon__x500_7__x500_7_with_euler.csv
CPSL_UAV_Tracking/src/redirection_commander/: package.xml  setup.cfg  setup.py
CPSL_UAV_Tracking/src/redirection_commander/launch/: redirection_commander.launch.py
CPSL_UAV_Tracking/src/redirection_commander/redirection_commander/: redirection_commander_node.py
px4_vo2pose/: package.xml  setup.cfg  setup.py
px4_vo2pose/px4_vo2pose/: px4_vo2pose.py
quat2euler/: quat2euler.py
quat2euler/26.897Khz-check-phase/: metadata.yaml  rosbag2_2025_09_05-16_37_12_0.db3
quat2euler/26.897Khz-speaker_at_back/: metadata.yaml  rosbag2_2025_09_11-14_13_40_0.db3
quat2euler/8-30-attack_26.895khz_compare_to_matlab_model/: metadata.yaml  rosbag2_2025_08_30-14_07_45_0.db3
quat2euler/9-2-26.8984Khz-28cm-offset-100mv-attack-at-back/: metadata.yaml
sensor_combined2imu/: package.xml  setup.cfg  setup.py
x500_7_fw/: px4_v15.4.1_external_imu_mpu6500_ev_ctrl
(+1436 files in other folders)
