<?xml version="1.0"?>
<package format="3">
  <name>redirection_commander</name>
  <version>0.1.0</version>
  <description>Closed-loop redirection controller for UAV spoofing acceleration commands.</description>

  <maintainer email="haocheng.meng@duke.edu">CPSL</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
