<?xml version="1.0"?>
<package format="3">
  <name>cpsl_px4_vicon_controller</name>
  <version>0.1.0</version>
  <description>Waypoint controller for PX4 Offboard in a Vicon room (ROS 2 Jazzy)</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>px4_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
